# mayingzhen

./: .gitignore  111  CMakeLists.txt  IOSStandard.cmake  MaEngine.sln  MyDemomm.sln  MyDemomm.sln.8.0  README.md  Tesx.scene  anchor.skn  readme.txt  toDoList.txt
code/: CMakeLists.txt
code/Application/: CMakeLists.txt  Export.h  Game.h  Game.hxx  Module.cpp  Module.h  Platform.h  Platform.hxx  Systems.h  Systems.hxx  stdAfx.cpp  stdAfx.h  ui.h  ui.hxx
code/Application/Android/: PlatformAndroid.hxx  android_native_app_glue.h  android_native_app_glue.hxx
code/Application/Input/: AndroidInputInjector.hxx  Gesture.h  Input.h  Input.hxx  Joystick.cpp  Joystick.h  Keyboard.h  Mouse.h
code/Application/Win/: PlatformWin.hxx
code/Application/iOS/: AppDelegate.h  AppDelegate.mm  PlatformiOS.mm  View.h  View.mm  imgui_impl_metal.mm
code/CSharpImport/: CSharpImport_wrap.cxx  Common.i  Engine.i  Framework.i
code/CSharpImport/CSharp/: ScriptObject.cs
code/Common/: Assert.h  Assert.hxx  BaseType.h  BitField.h  BitmaskEnum.h  CMakeLists.txt  Export.h  Frustum.h  Frustum.hxx  IntersectionTests.h  Log.h  Log.hxx  Macro.h  MatViewProj.h  Mem.h  Mem.hxx  Module.cpp  Module.h  OgreString.h  Rectangle.h  Rectangle.hxx  RefPtr.h  Referenced.h  SIMDHelper.h  SSE2NEON.h  SmartPointer.inl  StaticFunc.h  StaticFunc.hxx  StringConverter.h  StringConverter.hxx  StringHash.h  StringHash.hxx  StringUtils.h  StringUtils.hxx  TArray.h  WarningPrefix.h  Warningfix.h  delegate.h  md5.h  md5.hxx  (+2 more)
code/Common/Math/: AABB.h  AABB.hxx  AABB2D.h  AABB2D.hxx  Angle.h  Any.h  Bitwise.h  Capsule.hxx  ColourValue.h  ColourValue.hxx  ConvexBody.h  ConvexBody.hxx  DualQuaternion.h  DualQuaternion.hxx  EulerAngle.h  Frustum.h  Frustum.hxx  GUID.h  Line3D.h  Math.h  Math.hxx  Math.inl  MathBase.h  MathBase.inl  MathBase_Portable.hxx  MathSSE.h  Matrix3.h  Matrix3.hxx  Matrix3x4.h  Matrix4.h  Matrix4.hxx  Numerics.h  Plane.h  Plane.hxx  PlaneBoundedVolume.h  Polygon.h  Quaternion.h  Quaternion.hxx  Ray.h  Rectangle.h  (+22 more)
code/Common/Platform/: Platform.h  Platform.hxx
code/Common/Profiler/: microprofile.h  microprofile_html.h  systrace.h
code/Common/RTTI/: Object.hxx  ObjectFactory.h  ObjectFactory.hxx  RTTIClass.h
code/Common/RapidXml/: rapidxml.hpp  rapidxml_iterators.hpp  rapidxml_print.hpp  rapidxml_utils.hpp
code/Common/tinyxml/: tinystr.h
code/Engine/: CMakeLists.txt  Engine.def  Engine.h  Engine.hxx  Export.def  Export.h  IDevice.h  Module.cpp  Module.h  RTTI.h  RTTIDecl.h  WarningPrefix.h  stdAfx.cpp  stdAfx.h
code/Engine/Animation/: IAction.h  IAnimationDevice.h  IAnimationDevice.hxx  IAnimationObject.h  IAnimationPlay.h  IAnimationSet.h  IAnimationSystem.h  IAnimationSystem.hxx
code/Engine/Application/: Game.h  Game.hxx  Platform.h  Platform.hxx
code/Engine/CullTree/: CullNode.h  CullTree.hxx  Octree.hxx
code/Engine/EntitySystem/: Component.h  Component.hxx  CullNode.h  CullTree.h  CullTree.hxx  EntitySystem.h  EntitySystem.hxx  GameObj.h  GameObj.hxx  Octree.hxx  OctreeNode.hxx  Scene.hxx  SceneNode.h  SceneNode.hxx
code/Engine/Event/: Event.h
code/Engine/FrameGraph/: Blackboard.h  Blackboard.hxx  FrameGraph.h  FrameGraph.hxx  FrameGraphHandle.h  FrameGraphHandle.hxx  FrameGraphPass.h  FrameGraphPassResources.h  FrameGraphPassResources.hxx  PassNode.h  PassNode.hxx  RenderTargetResourceEntry.h  RenderTargetResourceEntry.hxx  ResourceAllocator.h  ResourceAllocator.hxx  ResourceEntry.h  ResourceEntry.hxx  ResourceNode.h  VirtualResource.h
code/Engine/ImageData/: DDSCodec.h  DDSCodec.hxx  ETC1Codec.h  ETC1Codec.hxx  ImageCodec.h  ImageCodec.hxx  ImageCodecResampler.h  ImageData.h  ImageData.hxx  PVRTCCodec.h  PVRTCCodec.hxx  PVRTCDecompress.h  PVRTCDecompress.hxx  PixelConversions.h  PixelFormat.h  PixelFormat.hxx
code/Engine/Input/: AndroidInputInjector.h  AndroidInputInjector.hxx  Gesture.h  Input.h  Input.hxx  Joystick.hxx  Keyboard.h
code/Engine/Material/: ComputeShader.h  ComputeShader.hxx  Material.h  Material.hxx  MaterialData.h  MaterialParameter.h  MaterialParameter.hxx  MethodBinding.h  ParameterManager.h  ParameterManager.hxx  PrePareShaderSource.h  RenderState.h  RenderState.hxx  SamplerState.h  SamplerState.hxx  ShaderManager.h  ShaderManager.hxx  ShaderProgram.h  ShaderProgram.hxx  Technqiue.h  Technqiue.hxx  Texture.h  Texture.hxx  TextureManager.h  TextureManager.hxx  Uniform.h  Uniform.hxx  UniformAnimation.h  UniformAnimation.hxx
code/Engine/Physics/: ICharacterController.h  ICharacterController.hxx  ICollisionShape.h  ICollisionShape.hxx  IPhysicsDevive.hxx  IPhysicsJoint.h  IPhysicsJoint.hxx  IPhysicsObject.h  IPhysicsScene.h  IPhysicsSystem.h  IRigidBody.h  IRigidBody.hxx  RTTI.h  Ragdoll.h
code/Engine/Profile/: CodeTimer.h  CodeTimer.hxx  CodeTimer.inl
code/Engine/Profiler/: microprofile.cpp  profile.h  systrace.h
code/Engine/RTTI/: Attribute.h  Attribute.hxx  AttributeManager.h  AttributeManager.hxx  Context.h  Context.hxx  Object.h  Object.hxx  ObjectFactory.h  ObjectFactory.hxx  RTTIClass.h  RTTIClass.hxx  Referenced.h  Serializable.h  Serializable.hxx
code/Engine/RenderScheme/: AlchemyAo.h  AlchemyAo.hxx  BlurPostProcess.h  BlurPostProcess.hxx  DeferredLightPass.h  DeferredLightPass.hxx  DeferredShadingPass.h  DeferredShadingPass.hxx  DeferredShadowPass.h  DeferredShadowPass.hxx  DownSacalePostProcess.h  DownSacalePostProcess.hxx  GBufferPass.h  GBufferPass.hxx  HDRPostProcess.h  HDRPostProcess.hxx  LinearizeDepth.h  LinearizeDepth.hxx  PostProcess.h  PostProcess.hxx  (+11 more)
code/EntitySystem/: Export.h  GameObj.h  GameObj.hxx  RTTIDecl.h  Scene.h  Scene.hxx  SceneVisiter.h  Util.h  stdAfx.cpp
code/Framwork/: CompRTTIDecl.h  EntitySystem.hxx  GameObj.h  GameObj.hxx  Module.cpp  Module.h  RTTIDecl.h  Scene.h  Scene.hxx  SceneNode.h  SceneNode.hxx  Util.h  stdAfx.cpp
code/Render/: Export.h  Module.cpp  Module.h  RTTI.h
code/Samples/: CMakeLists.txt  CameraController.h  CameraController.hxx  Sample.h  Sample.hxx  SampleBrowser.cpp  SampleBrowser.h  Systems.hxx  imgui_impl_win32.cpp  main-Android.cpp  main-ios.mm  main-windows.cpp  stdafx.h
(+3567 files in other folders)
